# Flight-Path-Optimizer

./: .dockerignore  .gitignore  Airport.cpp  Airport.h  CMakeLists.txt  CMakePresets.json  Dockerfile  FlightPathOptimizerConsole.sln  FlightPathOptimizerConsole.vcxproj  FlightPathOptimizerConsole.vcxproj.filters  LICENSE  README.md  Readme.md  airportTest.cpp  docker-compose.yml  edge.h  edgeTest.cpp  fetchAirportData.py  flightPathOptimizer.cpp  graph.cpp  graph.h  plannerTest.cpp  testairports.json  testairports_multi.dot  testairports_multi.json  testairports_single.json
Settings/: config.json
datasets/: airports.json  global_airports.json  testairports.json
dot_files/: airports.dot
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: main.jsx  styles.css
include/: Airport.h  Edge.h  Graph.h  Logger.h  utility_functions.h
old/: Edge_old.cpp  Edge_old.h  edgeTest_old.cpp
planning_and_test_documents/: Plan.txt
scripts/: fetchAirportData.py
src/: Airport.cpp  Edge.cpp  FlightPathOptimizer.cpp  FlightPathOptimizerConsole.cpp  Graph.cpp  Logger.cpp  api_service.cpp  flightPathOptimizer.cpp  utility_functions.cpp
tests/: airportTest.cpp  edgeTest.cpp  graphTest.cpp  plannerTest.cpp  utilityTest.cpp
